# system_webview-release

./: .pre-commit-config.yaml  CHANGELOG.rst  CMakeLists.txt  README.md  build.sh  debian.store  dev.sh  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yaml
debian/: changelog  control  copyright  gbp.conf  rules
launch/: main.launch.py
rpm/: ros-jazzy-system-webview.spec  ros-lyrical-system-webview.spec  ros-rolling-system-webview.spec  template.spec
src/: http_server.cpp  usb_monitoring.cpp  usb_monitoring.hpp
web/: index.html  next.config.mjs  package-lock.json  package.json  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: ConnectionBadge.tsx  LogViewer.tsx  NodeSection.tsx  NodesPanel.tsx  SystemStatsPanel.tsx  Tabs.tsx  TopicsPanel.tsx
web/hooks/: useNodeStats.ts  useRos.ts  useSystemStats.ts
web/types/: ros.ts  roslib.d.ts  system.ts
