<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>system_webview</name>
  <version>0.0.3</version>
  <description>Real-time web-based system webview for ROS 2 — CPU, memory, swap, load average, and /rosout log viewer</description>
  <maintainer email="davewbrwn@gmail.com">david</maintainer>
  <license>MIT</license>
  <url type="repository">https://github.com/namo-robotics/ros2_system_webview</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ament_index_cpp</depend>
  <depend>rosbridge_server</depend>
  <depend>libcpp-httplib-dev</depend>
  <depend>pkg-config</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
